# python-plugins-example

./: README.md  setup_all.sh
spiffy-core/: README.md  pyproject.toml  recreate_env.sh  show_spiffy_dist_contents.sh  test.sh
spiffy-core/spiffy/: platform.py  universe.py
spiffy-core/spiffy/astrophys/: planet.py  star.py
spiffy-core/spiffy/things/: arm.py  thing.py
spiffy-core/tests/: test_platform.py  test_universe.py
spiffy-core/tests/astrophys/: test_planet.py  test_star.py
spiffy-core/tests/things/: test_arm.py  test_thing.py
spiffy-plugin/: README.md  pyproject.toml  rebuild.sh  recreate_env.sh  show_spiffy_dist_contents.sh
spiffy-plugin/spiffy/astrophys/: blackhole.py
spiffy-plugin/spiffy/things/: extension.py
spiffy-plugin/spiffy/things_extra/: antenna.py
spiffy-plugin/spiffy/vehicles/: shuttle.py  spaceship.py
spiffy-plugin/tests/astrophys/: test_blackhole.py
spiffy-plugin/tests/things/: test_extension.py
spiffy-plugin/tests/things_extra/: test_antenna.py
spiffy-plugin/tests/vehicles/: test_shuttle.py  test_spaceship.py
spiffy-user/: README.md  install_plugin.sh  setup_env.sh  setup_user_env.sh  show_spiffy_installed_contents.sh  test.py
