[tool.poetry]
name = "spiffy-core"
version = "0.1.0"
description = "package-pluging tester: base"
authors = ["jmeidam <m.strips@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jmeidam/spiffy"
repository = "https://github.com/jmeidam/spiffy"
packages = [{include = "spiffy"}]
#packages = [
#    { include = "things_extra", from = "spiffy" }
#]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^6.4.4"}
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.3.1"
pytest-env = "^0.6.2"
black = "^22.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s -p no:warnings"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "[pytest][%(asctime)s][%(levelname)s][%(module)s][%(funcName)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"
filterwarnings = [
    "ignore::DeprecationWarning:py4j.*:",
    "ignore::DeprecationWarning:pyspark.*:",
    "ignore::DeprecationWarning:pyhocon.*:",
    "ignore::DeprecationWarning:distutils.*:"
]

[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
source = [
    "spiffy"
]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
ignore_errors = true
omit = [
    "tests/*"
]
